sumo/tests/traci/VariableRetrieval/VehicleType/errors/UnknownID/errors.traci
Error: Answered with error to command 165: Vehicle type 'xxx' is not known
